Colab을 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPryHWfZRljTOa1Psu4XZLi",
+      "authorship_tag": "ABX9TyNxmUPfv78wI4whNjBfq6TW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,41 +29,36 @@
     {
       "cell_type": "code",
       "source": [
-        "nums = [1, 1, 1, 2, 2, 3, 2, 3, 3, 3, 1]\n",
-        "def max_count(nums):\n",
+        "training_data = [['연두', 3, '사과'],\n",
+        "                 ['노랑', 3, '사과'],\n",
+        "                 ['빨강', 2, '포도'],\n",
+        "                 ['빨강', 1, '포도'],\n",
+        "                 ['노랑', 3, '레몬']]\n",
+        "def fruit_counts(data):\n",
         "  counts = {}\n",
-        "  for i in nums:\n",
-        "      if i in counts:\n",
-        "         counts[i] += 1\n",
-        "      else:\n",
-        "         counts[i] = 1\n",
+        "  for row in data:\n",
+        "    label = row[-1]\n",
+        "    if label not in counts:\n",
+        "      counts[label] = 0\n",
+        "    counts[label] += 1\n",
         "  return counts\n",
-        "counts = max_count(nums)\n",
-        "first = []\n",
-        "max_num = max(counts.values())\n",
-        "for name, count in counts.items():\n",
-        "    print(name, ':', count,'번')\n",
-        "    if count == max_num:\n",
-        "        first.append(name)\n",
-        "print('1등:', first)"
+        "result = fruit_counts(training_data)\n",
+        "print(result)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YC37SihKU5bb",
-        "outputId": "b9c21151-097d-4ee7-ddcf-1686ae8b3aea"
+        "id": "WobCWhECadRR",
+        "outputId": "3078f2b9-2969-43ee-bd9b-0826cda50ee6"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 : 4 번\n",
-            "2 : 3 번\n",
-            "3 : 4 번\n",
-            "1등: [1, 3]\n"
+            "{'사과': 2, '포도': 2, '레몬': 1}\n"
           ]
         }
       ]
