Colab을 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxmUPfv78wI4whNjBfq6TW",
+      "authorship_tag": "ABX9TyPG2nyw5fuTEIHAxSamkdJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,37 +29,35 @@
     {
       "cell_type": "code",
       "source": [
-        "training_data = [['연두', 3, '사과'],\n",
-        "                 ['노랑', 3, '사과'],\n",
-        "                 ['빨강', 2, '포도'],\n",
-        "                 ['빨강', 1, '포도'],\n",
-        "                 ['노랑', 3, '레몬']]\n",
-        "def fruit_counts(data):\n",
+        "text = \"AI! 나는 인공지능 로봇 입니다. 나는 'AI 로봇' 입니다.\"\n",
+        "def max_counts(text):\n",
         "  counts = {}\n",
-        "  for row in data:\n",
-        "    label = row[-1]\n",
-        "    if label not in counts:\n",
-        "      counts[label] = 0\n",
-        "    counts[label] += 1\n",
+        "  for i in text.split(' '):\n",
+        "      if i in counts:\n",
+        "         counts[i] += 1\n",
+        "      else:\n",
+        "         counts[i] = 1\n",
         "  return counts\n",
-        "result = fruit_counts(training_data)\n",
-        "print(result)"
+        "max_counts(text)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WobCWhECadRR",
-        "outputId": "3078f2b9-2969-43ee-bd9b-0826cda50ee6"
+        "id": "Q6Alxf39doI8",
+        "outputId": "5a95f117-3c06-4fe3-bfc1-934f089c1a77"
       },
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'사과': 2, '포도': 2, '레몬': 1}\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'AI!': 1, '나는': 2, '인공지능': 1, '로봇': 1, '입니다.': 2, \"'AI\": 1, \"로봇'\": 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
