Colab을 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPG2nyw5fuTEIHAxSamkdJv",
+      "authorship_tag": "ABX9TyPNPy6LE6e6f1i4Eie2OSky",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,35 +29,33 @@
     {
       "cell_type": "code",
       "source": [
-        "text = \"AI! 나는 인공지능 로봇 입니다. 나는 'AI 로봇' 입니다.\"\n",
-        "def max_counts(text):\n",
+        "people = ['홍', '이', '김', '이', '이', '김']\n",
+        "def max_count(people):\n",
         "  counts = {}\n",
-        "  for i in text.split(' '):\n",
+        "  for i in people:\n",
         "      if i in counts:\n",
         "         counts[i] += 1\n",
         "      else:\n",
         "         counts[i] = 1\n",
         "  return counts\n",
-        "max_counts(text)"
+        "counts = max_count(people)\n",
+        "print(counts)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Q6Alxf39doI8",
-        "outputId": "5a95f117-3c06-4fe3-bfc1-934f089c1a77"
+        "id": "rn9uGQqeeMPs",
+        "outputId": "4784057c-ec67-4574-b4b6-6fa223b5fdf9"
       },
-      "execution_count": 36,
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'AI!': 1, '나는': 2, '인공지능': 1, '로봇': 1, '입니다.': 2, \"'AI\": 1, \"로봇'\": 1}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'홍': 1, '이': 3, '김': 2}\n"
+          ]
         }
       ]
     }
